raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef struct RenderTexture2D
{
    unsigned int id;   
    Texture2D texture; 
    Texture2D depth;   
    bool depthTexture; 
} RenderTexture2D;
typedef struct CharInfo
{
    int value;           
    Rectangle rec;       
    int offsetX;         
    int offsetY;         
    int advanceX;        
    unsigned char *data; 
} CharInfo;
typedef struct Font
{
    Texture2D texture; 
    int baseSize;      
    int charsCount;    
    CharInfo *chars;   
} Font;
typedef struct Camera3D
{
    Vector3 position; 
    Vector3 target;   
    Vector3 up;       
    float fovy;       
    int type;         
} Camera3D;
    RLAPI Vector2 GetGestureDragVector(void);                 
    RLAPI float GetGestureDragAngle(void);                    
    RLAPI Vector2 GetGesturePinchVector(void);                
    RLAPI float GetGesturePinchAngle(void);                   
    RLAPI void SetCameraMode(Camera camera, int mode); 
    RLAPI void UpdateCamera(Camera *camera);           
    RLAPI void SetCameraPanControl(int panKey);                                                                     
    RLAPI void SetCameraAltControl(int altKey);                                                                     
    RLAPI void SetCameraSmoothZoomControl(int szKey);                                                               
    RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); 
    RLAPI void DrawPixel(int posX, int posY, Color color);                                                    
    RLAPI void DrawPixelV(Vector2 position, Color color);                                                     
    RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                 
    RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                      
    RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                        
    RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                    
    RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                               
    RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);        
    RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                        
    RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                          
    RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                         
    RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                   
    RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                  
    RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                  
    RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2); 
    RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2); 
    RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);        
    RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                    
    RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                               
    RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                 
    RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                            
    RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);                
    RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                       
    RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                  
    RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                    
    RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2); 
    RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                  
    RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                  
    RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                  
    RLAPI bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                
    RLAPI bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);        
    RLAPI Image LoadImage(const char *fileName);                                                       
    RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                     
    RLAPI Image LoadImagePro(void *data, int width, int height, int format);                           
    RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize); 
    RLAPI void ExportImage(Image image, const char *fileName);                                         
    RLAPI Texture2D LoadTexture(const char *fileName);                                                 
    RLAPI Texture2D LoadTextureFromImage(Image image);                                                 
    RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                    
    RLAPI void UnloadImage(Image image);                                                               
    RLAPI void UnloadTexture(Texture2D texture);                                                       
    RLAPI void UnloadRenderTexture(RenderTexture2D target);                                            
    RLAPI Color *GetImageData(Image image);                                                            
    RLAPI Vector4 *GetImageDataNormalized(Image image);                                                
    RLAPI int GetPixelDataSize(int width, int height, int format);                                     
    RLAPI Image GetTextureData(Texture2D texture);                                                     
    RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                   
    RLAPI Image ImageCopy(Image image);                                                                                                
    RLAPI void ImageToPOT(Image *image, Color fillColor);                                                                              
    RLAPI void ImageFormat(Image *image, int newFormat);                                                                               
    RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                                          
    RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                                            
    RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                                          
    RLAPI void ImageAlphaPremultiply(Image *image);                                                                                    
    RLAPI void ImageCrop(Image *image, Rectangle crop);                                                                                
    RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                                                 
    RLAPI void ImageResizeNN(Image *image, int newWidth, int newHeight);                                                               
    RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);                    
    RLAPI void ImageMipmaps(Image *image);                                                                                             
    RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                                                      
    RLAPI Image ImageText(const char *text, int fontSize, Color color);                                                                
    RLAPI Image ImageTextEx(Font font, const char *text, float fontSize, float spacing, Color tint);                                   
    RLAPI void ImageDraw(Image *dst, Image src, Rectangle srcRec, Rectangle dstRec);                                                   
    RLAPI void ImageDrawRectangle(Image *dst, Rectangle rec, Color color);                                                             
    RLAPI void ImageDrawText(Image *dst, Vector2 position, const char *text, int fontSize, Color color);                               
    RLAPI void ImageDrawTextEx(Image *dst, Vector2 position, Font font, const char *text, float fontSize, float spacing, Color color); 
    RLAPI void ImageFlipVertical(Image *image);                                                                                        
    RLAPI void ImageFlipHorizontal(Image *image);                                                                                      
    RLAPI void ImageRotateCW(Image *image);                                                                                            
    RLAPI void ImageRotateCCW(Image *image);                                                                                           
    RLAPI void ImageColorTint(Image *image, Color color);                                                                              
    RLAPI void ImageColorInvert(Image *image);                                                                                         
    RLAPI void ImageColorGrayscale(Image *image);                                                                                      
    RLAPI void ImageColorContrast(Image *image, float contrast);                                                                       
    RLAPI void ImageColorBrightness(Image *image, int brightness);                                                                     
    RLAPI void ImageColorReplace(Image *image, Color color, Color replace);                                                            
    RLAPI Image GenImageColor(int width, int height, Color color);                                        
    RLAPI Image GenImageGradientV(int width, int height, Color top, Color bottom);                        
    RLAPI Image GenImageGradientH(int width, int height, Color left, Color right);                        
    RLAPI Image GenImageGradientRadial(int width, int height, float density, Color inner, Color outer);   
    RLAPI Image GenImageChecked(int width, int height, int checksX, int checksY, Color col1, Color col2); 
    RLAPI Image GenImageWhiteNoise(int width, int height, float factor);                                  
    RLAPI Image GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);        
    RLAPI Image GenImageCellular(int width, int height, int tileSize);                                    
    RLAPI void GenTextureMipmaps(Texture2D *texture);               
    RLAPI void SetTextureFilter(Texture2D texture, int filterMode); 
    RLAPI void SetTextureWrap(Texture2D texture, int wrapMode);     
    RLAPI void DrawTexture(Texture2D texture, int posX, int posY, Color tint);                                                             
    RLAPI void DrawTextureV(Texture2D texture, Vector2 position, Color tint);                                                              
    RLAPI void DrawTextureEx(Texture2D texture, Vector2 position, float rotation, float scale, Color tint);                                
    RLAPI void DrawTextureRec(Texture2D texture, Rectangle sourceRec, Vector2 position, Color tint);                                       
    RLAPI void DrawTexturePro(Texture2D texture, Rectangle sourceRec, Rectangle destRec, Vector2 origin, float rotation, Color tint);      
    RLAPI Font GetFontDefault(void);                                                                            
    RLAPI Font LoadFont(const char *fileName);                                                                  
    RLAPI Font LoadFontEx(const char *fileName, int fontSize, int *fontChars, int charsCount);                  
    RLAPI CharInfo *LoadFontData(const char *fileName, int fontSize, int *fontChars, int charsCount, int type); 