src/raylib.rs


    pub fn GetGestureDragVector() -> Vector2;

    pub fn GetGestureDragAngle() -> f32;

    pub fn GetGesturePinchVector() -> Vector2;

    pub fn GetGesturePinchAngle() -> f32;

    pub fn SetCameraMode(camera: Camera3D, mode: ::std::os::raw::c_int);

    pub fn UpdateCamera(camera: *mut Camera3D);

    pub fn SetCameraPanControl(panKey: ::std::os::raw::c_int);

    pub fn SetCameraAltControl(altKey: ::std::os::raw::c_int);

    pub fn SetCameraSmoothZoomControl(szKey: ::std::os::raw::c_int);

    pub fn SetCameraMoveControls(
        frontKey: ::std::os::raw::c_int,
        backKey: ::std::os::raw::c_int,
        rightKey: ::std::os::raw::c_int,
        leftKey: ::std::os::raw::c_int,
        upKey: ::std::os::raw::c_int,
        downKey: ::std::os::raw::c_int,
    );

    pub fn DrawPixel(posX: ::std::os::raw::c_int, posY: ::std::os::raw::c_int, color: Color);

    pub fn DrawPixelV(position: Vector2, color: Color);

    pub fn DrawLine(
        startPosX: ::std::os::raw::c_int,
        startPosY: ::std::os::raw::c_int,
        endPosX: ::std::os::raw::c_int,
        endPosY: ::std::os::raw::c_int,
        color: Color,
    );

    pub fn DrawLineV(startPos: Vector2, endPos: Vector2, color: Color);

    pub fn DrawLineEx(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);

    pub fn DrawLineBezier(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);

    pub fn DrawCircle(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );

    pub fn DrawCircleGradient(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color1: Color,
        color2: Color,
    );

    pub fn DrawCircleV(center: Vector2, radius: f32, color: Color);

    pub fn DrawCircleLines(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );

    pub fn DrawRectangle(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );

    pub fn DrawRectangleV(position: Vector2, size: Vector2, color: Color);

    pub fn DrawRectangleRec(rec: Rectangle, color: Color);

    pub fn DrawRectanglePro(rec: Rectangle, origin: Vector2, rotation: f32, color: Color);

    pub fn DrawRectangleGradientV(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );

    pub fn DrawRectangleGradientH(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );

    pub fn DrawRectangleGradientEx(
        rec: Rectangle,
        col1: Color,
        col2: Color,
        col3: Color,
        col4: Color,
    );

    pub fn DrawRectangleLines(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );

    pub fn DrawRectangleLinesEx(rec: Rectangle, lineThick: ::std::os::raw::c_int, color: Color);

    pub fn DrawTriangle(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);

    pub fn DrawTriangleLines(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);

    pub fn DrawPoly(
        center: Vector2,
        sides: ::std::os::raw::c_int,
        radius: f32,
        rotation: f32,
        color: Color,
    );

    pub fn DrawPolyEx(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);

    pub fn DrawPolyExLines(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);

    pub fn CheckCollisionRecs(rec1: Rectangle, rec2: Rectangle) -> bool;

    pub fn CheckCollisionCircles(
        center1: Vector2,
        radius1: f32,
        center2: Vector2,
        radius2: f32,
    ) -> bool;

    pub fn CheckCollisionCircleRec(center: Vector2, radius: f32, rec: Rectangle) -> bool;

    pub fn GetCollisionRec(rec1: Rectangle, rec2: Rectangle) -> Rectangle;

    pub fn CheckCollisionPointRec(point: Vector2, rec: Rectangle) -> bool;

    pub fn CheckCollisionPointCircle(point: Vector2, center: Vector2, radius: f32) -> bool;

    pub fn CheckCollisionPointTriangle(
        point: Vector2,
        p1: Vector2,
        p2: Vector2,
        p3: Vector2,
    ) -> bool;

    pub fn LoadImage(fileName: *const ::std::os::raw::c_char) -> Image;

    pub fn LoadImageEx(
        pixels: *mut Color,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> Image;

    pub fn LoadImagePro(
        data: *mut ::std::os::raw::c_void,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> Image;

    pub fn LoadImageRaw(
        fileName: *const ::std::os::raw::c_char,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
        headerSize: ::std::os::raw::c_int,
    ) -> Image;

    pub fn ExportImage(fileName: *const ::std::os::raw::c_char, image: Image);

    pub fn LoadTexture(fileName: *const ::std::os::raw::c_char) -> Texture2D;

    pub fn LoadTextureFromImage(image: Image) -> Texture2D;

    pub fn LoadRenderTexture(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> RenderTexture2D;

    pub fn UnloadImage(image: Image);

    pub fn UnloadTexture(texture: Texture2D);

    pub fn UnloadRenderTexture(target: RenderTexture2D);

    pub fn GetImageData(image: Image) -> *mut Color;

    pub fn GetImageDataNormalized(image: Image) -> *mut Vector4;

    pub fn GetPixelDataSize(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;

    pub fn GetTextureData(texture: Texture2D) -> Image;

    pub fn UpdateTexture(texture: Texture2D, pixels: *const ::std::os::raw::c_void);

    pub fn ImageCopy(image: Image) -> Image;

    pub fn ImageToPOT(image: *mut Image, fillColor: Color);

    pub fn ImageFormat(image: *mut Image, newFormat: ::std::os::raw::c_int);

    pub fn ImageAlphaMask(image: *mut Image, alphaMask: Image);

    pub fn ImageAlphaClear(image: *mut Image, color: Color, threshold: f32);

    pub fn ImageAlphaCrop(image: *mut Image, threshold: f32);

    pub fn ImageAlphaPremultiply(image: *mut Image);

    pub fn ImageCrop(image: *mut Image, crop: Rectangle);

    pub fn ImageResize(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );

    pub fn ImageResizeNN(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );

    pub fn ImageResizeCanvas(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
        offsetX: ::std::os::raw::c_int,
        offsetY: ::std::os::raw::c_int,
        color: Color,
    );

    pub fn ImageMipmaps(image: *mut Image);

    pub fn ImageDither(
        image: *mut Image,
        rBpp: ::std::os::raw::c_int,
        gBpp: ::std::os::raw::c_int,
        bBpp: ::std::os::raw::c_int,
        aBpp: ::std::os::raw::c_int,
    );

    pub fn ImageText(
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    ) -> Image;

    pub fn ImageTextEx(
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        tint: Color,
    ) -> Image;

    pub fn ImageDraw(dst: *mut Image, src: Image, srcRec: Rectangle, dstRec: Rectangle);

    pub fn ImageDrawRectangle(dst: *mut Image, position: Vector2, rec: Rectangle, color: Color);

    pub fn ImageDrawText(
        dst: *mut Image,
        position: Vector2,
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    );

    pub fn ImageDrawTextEx(
        dst: *mut Image,
        position: Vector2,
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        color: Color,
    );

    pub fn ImageFlipVertical(image: *mut Image);

    pub fn ImageFlipHorizontal(image: *mut Image);

    pub fn ImageRotateCW(image: *mut Image);

    pub fn ImageRotateCCW(image: *mut Image);

    pub fn ImageColorTint(image: *mut Image, color: Color);

    pub fn ImageColorInvert(image: *mut Image);

    pub fn ImageColorGrayscale(image: *mut Image);

    pub fn ImageColorContrast(image: *mut Image, contrast: f32);

    pub fn ImageColorBrightness(image: *mut Image, brightness: ::std::os::raw::c_int);

    pub fn ImageColorReplace(image: *mut Image, color: Color, replace: Color);

    pub fn GenImageColor(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    ) -> Image;

    pub fn GenImageGradientV(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        top: Color,
        bottom: Color,
    ) -> Image;

    pub fn GenImageGradientH(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        left: Color,
        right: Color,
    ) -> Image;

    pub fn GenImageGradientRadial(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        density: f32,
        inner: Color,
        outer: Color,
    ) -> Image;

    pub fn GenImageChecked(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        checksX: ::std::os::raw::c_int,
        checksY: ::std::os::raw::c_int,
        col1: Color,
        col2: Color,
    ) -> Image;

    pub fn GenImageWhiteNoise(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        factor: f32,
    ) -> Image;

    pub fn GenImagePerlinNoise(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        offsetX: ::std::os::raw::c_int,
        offsetY: ::std::os::raw::c_int,
        scale: f32,
    ) -> Image;

    pub fn GenImageCellular(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        tileSize: ::std::os::raw::c_int,
    ) -> Image;

    pub fn GenTextureMipmaps(texture: *mut Texture2D);

    pub fn SetTextureFilter(texture: Texture2D, filterMode: ::std::os::raw::c_int);

    pub fn SetTextureWrap(texture: Texture2D, wrapMode: ::std::os::raw::c_int);

    pub fn DrawTexture(
        texture: Texture2D,
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        tint: Color,
    );

    pub fn DrawTextureV(texture: Texture2D, position: Vector2, tint: Color);

    pub fn DrawTextureEx(
        texture: Texture2D,
        position: Vector2,
        rotation: f32,
        scale: f32,
        tint: Color,
    );

    pub fn DrawTextureRec(texture: Texture2D, sourceRec: Rectangle, position: Vector2, tint: Color);

    pub fn DrawTexturePro(
        texture: Texture2D,
        sourceRec: Rectangle,
        destRec: Rectangle,
        origin: Vector2,
        rotation: f32,
        tint: Color,
    );

    pub fn GetFontDefault() -> Font;

    pub fn LoadFont(fileName: *const ::std::os::raw::c_char) -> Font;

    pub fn LoadFontEx(
        fileName: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        charsCount: ::std::os::raw::c_int,
        fontChars: *mut ::std::os::raw::c_int,
    ) -> Font;

    pub fn LoadFontData(
        fileName: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        fontChars: *mut ::std::os::raw::c_int,
        charsCount: ::std::os::raw::c_int,
        sdf: bool,
    ) -> *mut CharInfo;
